// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<StoreProvider /> adds task to state on assign 1`] = `
{
  "activeTask": "",
  "events": "",
  "fetching": "false",
  "ready": "true",
  "tasks": "0%5Bid%5D=assignedTaskID&0%5Bassignee%5D=user%40example.com",
  "versions": "assignedTaskID=2",
}
`;

exports[`<StoreProvider /> adds task to state on create 1`] = `
{
  "activeTask": "",
  "events": "",
  "fetching": "false",
  "ready": "true",
  "tasks": "0%5Bid%5D=unassignedTaskID&0%5Bassignee%5D=",
  "versions": "unassignedTaskID=1",
}
`;

exports[`<StoreProvider /> ignores event with outdated version 1`] = `
{
  "activeTask": "",
  "events": "",
  "fetching": "false",
  "ready": "true",
  "tasks": "",
  "versions": "longFetchedTask=3",
}
`;

exports[`<StoreProvider /> ignores task assigned to someone else 1`] = `
{
  "activeTask": "",
  "events": "",
  "fetching": "false",
  "ready": "true",
  "tasks": "",
  "versions": "assignedTaskID=2",
}
`;

exports[`<StoreProvider /> initializes 1`] = `
{
  "activeTask": "",
  "events": "",
  "fetching": "false",
  "ready": "true",
  "tasks": "",
  "versions": "",
}
`;

exports[`<StoreProvider /> removes task from state on complete 1`] = `
{
  "activeTask": "",
  "events": "",
  "fetching": "false",
  "ready": "true",
  "tasks": "",
  "versions": "assignedTaskID=3",
}
`;

exports[`<StoreProvider /> removes task from state on delete 1`] = `
{
  "activeTask": "",
  "events": "",
  "fetching": "false",
  "ready": "true",
  "tasks": "",
  "versions": "assignedTaskID=4",
}
`;
